# 3d-variant-visualization

./: .gitignore  README.md  pyproject.toml
af2_modeling/: .gitignore  README.md
af2_modeling/fasta/: pkd1_pkd2_complex_full.fasta
af2_modeling/scripts/: build_complex_fasta.py  graft_6a70_onto_prediction.py  watch_af2_progress.py
af2_modeling/slurm/: run_af2_predict.sh  submit_pkd1_pkd2_full.sh  submit_smoke_test.sh
configs/domains/: P51587.yaml  P98161.yaml  pkd1_pkd2_interface.json
scripts/: build_brca2_3class_variants.py  build_pkd1_variants.py  compute_pkd1_pkd2_interface.py  prepare_variant_csv.py
slurm/: run_visualize.sh  run_visualize_brca2.sh  submit_brca2_3class.sh  submit_brca2_3class_1miu.sh  submit_brca2_hypomorphic.sh  submit_pkd1.sh  submit_pkd1_alphafold.sh  submit_pkd1_full_grafted.sh  submit_pkd1_pkd2_complex.sh  submit_pkd1_pkd2_grafted.sh
src/protein_vis/: cli.py  colors.py  domains.py  pipeline.py  render.py  structure.py  variants.py
tests/: conftest.py  test_colors.py  test_domains.py  test_pipeline_smoke.py  test_render.py  test_structure.py  test_variants.py
tests/fixtures/: 3Dmol.min.js  tiny_domains.yaml  tiny_uniprot.fasta  tiny_uniprot2.fasta  tiny_uniprot2_features.json  tiny_uniprot_features.json  tiny_uniprot_topology.json  tiny_variants.csv
