[project]
name = "protein-vis"
version = "0.1.0"
description = "Interactive + static 3D visualization of protein variants, grouped by structural domain."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pandas>=2.0",
    "numpy>=1.24",
    "biopython>=1.81",
    "py3Dmol>=2.1",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.scripts]
protein-vis = "protein_vis.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
